kustomization/platform/istio/mesh-peer-authentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: banking-ns
spec:
  mtls:
    mode: STRICT
